<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_nefej"
            android:icon="@drawable/nefec"
            android:title="@string/nefej" />
        <item
            android:id="@+id/nav_video"
            android:icon="@drawable/video"
            android:title="@string/video" />
        <item
            android:id="@+id/nav_music"
            android:icon="@drawable/audio"
            android:title="@string/audio" />
        <item
            android:id="@+id/nav_notice"
            android:icon="@drawable/notice"

            android:title="@string/notice" />
        <item
            android:id="@+id/nav_document"
            android:icon="@drawable/document"
            android:title="@string/document" />
    </group>
    <group android:id="@+id/my_move" android:checkableBehavior="single">
        <item
            android:id="@+id/nav_category"
            android:icon="@drawable/ic_category"
            android:title="@string/category" />

        <item
            android:id="@+id/nav_feedback"
            android:icon="@drawable/ic_feedback"
            android:title="@string/feedback" />

        <item
            android:id="@+id/nav_setting"
            android:icon="@drawable/nav_icon_settings"
            android:title="Setting" />
        <item
            android:id="@+id/nav_facebook"
            android:icon="@drawable/icon_facebook_logo"
            android:title="FB Connect" />
        <item
            android:id="@+id/nav_rate_us"
            android:icon="@drawable/thumb_up"
            android:title="@string/rate_us" />
    </group>


</menu>
