<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/lnr_pani"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ffffff"
        android:gravity="center_vertical"
        android:minHeight="?android:attr/listPreferredItemHeight"
        android:orientation="horizontal"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:paddingTop="8dp">


        <ImageView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:paddingRight="8dp"
            android:src="@drawable/icon_paani" />


        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:ellipsize="end"
                android:maxLines="2"
                android:text="@string/pani"
                android:textColor="#0b0b0b"
                android:textSize="18sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_alignParentBottom="true"
                android:background="#d7d7d7" />

        </RelativeLayout>

    </LinearLayout>
    <LinearLayout
        android:id="@+id/lnr_ankhijhyal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ffffff"
        android:gravity="center_vertical"
        android:minHeight="?android:attr/listPreferredItemHeight"
        android:orientation="horizontal"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:paddingTop="8dp">


        <ImageView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:paddingRight="8dp"
            android:src="@drawable/icon_ankhijhyal" />


        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:ellipsize="end"
                android:maxLines="2"
                android:text="@string/ankhijhyal"
                android:textColor="#0b0b0b"
                android:textSize="18sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_alignParentBottom="true"
                android:background="#d7d7d7" />

        </RelativeLayout>

    </LinearLayout>
    <LinearLayout
        android:id="@+id/lnr_naya_pusta"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ffffff"
        android:gravity="center_vertical"
        android:minHeight="?android:attr/listPreferredItemHeight"
        android:orientation="horizontal"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:paddingTop="8dp">


        <ImageView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:paddingRight="8dp"
            android:src="@drawable/icon_naya_pusta" />


        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:ellipsize="end"
                android:maxLines="2"
                android:text="@string/naya_pusta"
                android:textColor="#0b0b0b"
                android:textSize="18sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_alignParentBottom="true"
                android:background="#d7d7d7" />

        </RelativeLayout>

    </LinearLayout>
    <LinearLayout
        android:id="@+id/lnr_documentary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ffffff"
        android:gravity="center_vertical"
        android:minHeight="?android:attr/listPreferredItemHeight"
        android:orientation="horizontal"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:paddingTop="8dp">


        <ImageView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:paddingRight="8dp"
            android:src="@drawable/icon_documentary"/>


        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txt_category_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:ellipsize="end"
                android:maxLines="2"
                android:text="@string/documentary"
                android:textColor="#0b0b0b"
                android:textSize="18sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_alignParentBottom="true"
                android:background="#d7d7d7" />

        </RelativeLayout>

    </LinearLayout>

</LinearLayout>